[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/stage/ST.png" type="Texture" id=1]
[ext_resource path="res://assets/stage/ST3.png" type="Texture" id=2]
[ext_resource path="res://scene/DFA/DFA3.gd" type="Script" id=3]

[node name="DFA3" type="Node2D"]
script = ExtResource( 3 )

[node name="Stage" type="Sprite" parent="."]
position = Vector2( 551, 348 )
texture = ExtResource( 2 )

[node name="trap1" type="Sprite" parent="."]
position = Vector2( 615, 646 )
texture = ExtResource( 1 )

[node name="init" type="Sprite" parent="."]
position = Vector2( 242, 295 )
texture = ExtResource( 1 )

[node name="St1" type="Sprite" parent="."]
position = Vector2( 392, 293 )
texture = ExtResource( 1 )

[node name="St4_1" type="Sprite" parent="."]
position = Vector2( 547, 472 )
texture = ExtResource( 1 )

[node name="St5_4" type="Sprite" parent="."]
position = Vector2( 684, 471 )
texture = ExtResource( 1 )

[node name="St2_5" type="Sprite" parent="."]
position = Vector2( 544, 343 )
texture = ExtResource( 1 )

[node name="St4_5" type="Sprite" parent="."]
position = Vector2( 830, 468 )
texture = ExtResource( 1 )

[node name="FN" type="Sprite" parent="."]
position = Vector2( 861, 331 )
texture = ExtResource( 1 )

[node name="St5_2" type="Sprite" parent="."]
position = Vector2( 676, 343 )
texture = ExtResource( 1 )

[node name="St2_1" type="Sprite" parent="."]
position = Vector2( 546, 215 )
texture = ExtResource( 1 )

[node name="St3" type="Sprite" parent="."]
position = Vector2( 681, 214 )
texture = ExtResource( 1 )

[node name="trap2" type="Sprite" parent="."]
position = Vector2( 614, 51 )
texture = ExtResource( 1 )
